--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "express": "^4.18.1",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-calendars": "^1.1284.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-maps": "^0.31.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-webrtc": "^1.100.0",
+    "react-native-webview": "^11.18.2",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0"
   },
